# Go2_Gazebo_Environment

src/controls/go2_torque/: CMakeLists.txt  package.xml
src/controls/go2_torque/include/: controller.h
src/controls/go2_torque/include/OsqpEigen/: CMakeLists.txt  Constants.hpp  Data.cpp  Data.hpp  Debug.cpp  Settings.cpp  Settings.hpp  Solver.cpp  Solver.hpp  Solver.tpp  SparseMatrixHelper.hpp
src/controls/go2_torque/include/Tools/: CMakeLists.txt  NumericalTool.cpp  NumericalTool.h  RobotLeg.cpp  RobotLeg.h  TrajectoryGenerator.cpp  TrajectoryGenerator.h  pinocchio_interface.cpp  pinocchio_interface.hpp  ros_plot.h
src/controls/go2_torque/launch/: go2_torque.launch
src/controls/go2_torque/src/: controller.cpp  controller_node.cpp
src/robots/go2_control/: CMakeLists.txt  package.xml
src/robots/go2_control/config/: go2_control.yaml  joint_limits.yaml
src/robots/go2_control/launch/: go2_control.launch
src/robots/go2_description/: CMakeLists.txt  package.xml
src/robots/go2_description/urdf/: go2_air.xacro  go2_description.urdf  go2_ground.xacro
src/robots/go2_gazebo/: CMakeLists.txt  package.xml
src/robots/go2_gazebo/launch/: go2_air.launch  go2_ground.launch
src/robots/go2_gazebo/worlds/: go2_air.world  go2_ground.world
