<?xml version="1.0"?>
<package>
  <name>go2_description</name>
  <version>0.0.0</version>
  <description>The go2_description package</description>

  <maintainer email="990106ksw@seoultech.ac.kr">Seongwook</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>joint_state_publisher</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rviz</run_depend>

  <export>
  </export>
</package>
