<?xml version="1.0"?>
<package>
  <name>go2_gazebo</name>
  <version>0.1.0</version>
  <description>The go2_gazebo package</description>

  <maintainer email="990106ksw@seoultech.ac.kr">Seongwook</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>gazebo_plugins</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>go2_control</run_depend>
  <run_depend>go2_description</run_depend>
  <run_depend>xacro</run_depend>

  <export>
  </export>
</package>
