add_library(osqpeigen  
cs.c
ctrlc.c
Data.cpp
Debug.cpp
error.c
kkt.c
lin_alg.c
lin_sys.c
osqp.c
polish.c
proj.c
scaling.c
Solver.cpp
util.c
qdldl_interface.c
auxil.c
Settings.cpp
SuiteSparse_config.c
pardiso_interface.c
pardiso_loader.c
lib_handler.c
amd_1.c
amd_2.c
amd_aat.c
amd_control.c
amd_defaults.c
amd_info.c
amd_order.c
amd_postorder.c
amd_post_tree.c
amd_preprocess.c
amd_valid.c
qdldl.c

Data.tpp
Solver.tpp
SparseMatrixHelper.tpp
 )